opam-version: "2.0"
maintainer: "Nicolas Berthier <m@nberth.space>"
authors: ["Bertrand Jeannet" "Nicolas Berthier"]
homepage: "https://www.inrialpes.fr/pop-art/people/bjeannet/mlxxxidl-forge/mlcuddidl/index.html"
bug-reports: "https://gforge.inria.fr/projects/mlxxxidl/"
# SVN repositories not supported (yet).
# dev-repo: "svn://scm.gforge.inria.fr/svnroot/mlxxxidl/mlcuddidl/"
dev-repo: "git+https://github.com/SHoltzen/mlcuddidil#master"
license: "LGPL-2.1"
build: [
  ["./configure"
   "--disable-profiling" { arch = "arm64" | ( os = "macos" & os-version >= "10.14" ) } ]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml" {>= "4.02"}
  "ocamlfind"  {build}
  "camlidl"    {build}
  "ocamlbuild" {build}
  "conf-m4"    {build}
]
